[HVHA-4] Generate Hedera DID document
- Generate Document
- Publish it to HCS when initializing application
- Expose DID endpoint to view the document
