# src/admin/AdminController.ts
@@ -1,6 +1,5 @@
-import { Body, Controller, Delete, Get, Path, Post, Route, ValidateError } from "tsoa";
+import { Body, Controller, Get, Post, Route } from "tsoa";
 
-import { initIdentityNetworkFromAddressBook, deleteIdentityNetworkFromFileId } from "../services/hedera";
 import { getApplicationStatus, initApplication } from "./admin";
 
 /**
@@ -28,52 +27,6 @@ export class AdminController extends Controller {
     const addressBook = didNetwork.getAddressBook();
 
     return String(addressBook.getFileId());
-  }
-
-  /**
-   *
-   * @param addressBookFileId
-   * @example 0.0.1907569
-   * @returns
-   */
-  @Get("{addressBookFileId}")
-  public async loadIdentityNetwork(@Path() addressBookFileId: string) {
-    try {
-      const didNetwork = await initIdentityNetworkFromAddressBook(addressBookFileId);
-
-      return didNetwork.getAddressBook();
-    } catch (err) {
-      console.error(err);
-      return new ValidateError(
-        {
-          addressBookFileId: {
-            value: addressBookFileId,
-            message: "Invalid Address Book File Id"
-          }
-        },
-        "Invalid Address Book File Id"
-      );
-    }
-  }
-
-  @Delete("{addressBookFileId}")
-  public async deleteIdentityNetwork(@Path() addressBookFileId: string) {
-    try {
-      const receipt = await deleteIdentityNetworkFromFileId(addressBookFileId);
-
-      return receipt.status;
-    } catch (err) {
-      console.error(err);
-      return new ValidateError(
-        {
-          addressBookFileId: {
-            value: addressBookFileId,
-            message: "Invalid Address Book File Id"
-          }
-        },
-        "Invalid Address Book File Id"
-      );
-    }
   }
 
   @Get("status")
